--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/node": "^20.5.7",
     "nuxt": "^3.7.0"
+  },
+  "dependencies": {
+    "typescript": "^5.2.2",
+    "vue-tsc": "^1.8.8"
   }
 }
