--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^20.5.7",
-    "nuxt": "^3.7.0"
+    "nuxt": "^3.7.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2"
   },
   "dependencies": {
     "typescript": "^5.2.2",
