--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@nuxtjs/svg-sprite": "^1.0.2",
+    "v3-infinite-loading": "^1.3.1",
     "vue-tsc": "^1.8.8"
   }
 }
