--- a/cicd/azure-pipelines.yml
+++ b/cicd/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
       vmImage: $(vmImageName)
     steps:
 
-    - bash: echo 'Step1 - $(NUXT_ENV_API_URL)'
+    - bash: echo "Step1 - '$(NUXT_ENV_API_URL)'"
 
     - task: Docker@2
       displayName: 'Building Docker image'
