--- a/cicd/azure-pipelines.yml
+++ b/cicd/azure-pipelines.yml
@@ -41,7 +41,7 @@ stages:
           $(buildTag)
           latest
 
-    - bash: echo 'Step2 - $(NUXT_ENV_API_URL)'
+    - bash: echo "Step2 - '$(NUXT_ENV_API_URL)'"
 
     - task: Docker@2
       displayName: 'Push Docker image'
