--- a/cicd/azure-pipelines.yml
+++ b/cicd/azure-pipelines.yml
@@ -27,8 +27,6 @@ stages:
       vmImage: $(vmImageName)
     steps:
 
-    - bash: echo "Step1 - '$(NUXT_ENV_API_URL)'"
-
     - task: Docker@2
       displayName: 'Building Docker image'
       inputs:
@@ -40,8 +38,6 @@ stages:
         tags: |
           $(buildTag)
           latest
-
-    - bash: echo "Step2 - '$(NUXT_ENV_API_URL)'"
 
     - task: Docker@2
       displayName: 'Push Docker image'
@@ -77,3 +73,4 @@ stages:
               DockerNamespace: '$(containerRegistry)'
               DockerRepository: '$(dockerImageName)'
               DockerImageTag: '$(buildTag)'
+              StartupCommand: ''
