--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prettier": "^3.0.2",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
     "@nuxtjs/svg-sprite": "^1.0.2",
